updating store_status images in store_lists page

--- a/views/admin/store_dashboard/store_lists.erb
+++ b/views/admin/store_dashboard/store_lists.erb
@@ -72,9 +72,9 @@
                             </td>
                             <td>
                                 <% if store["store_status"] == "Active" %>
-                                    <span class="badge bg-success">Open</span>
+                                    <img src="/img/icons/open.png" alt="Open" id="store_status" width="50"/>
                                 <% else %>
-                                    <span class="badge bg-danger">Closed</span>
+                                    <img src="/img/icons/closed.png" alt="Closed" id="store_status" width="50" />
                                 <% end %>
                             </td>
                             <td>
