--- a/views/seller/seller_items/view.erb
+++ b/views/seller/seller_items/view.erb
@@ -32,7 +32,7 @@
             <div class="mb-3 row">
                 <label for="item_description" class="col-sm-2 col-form-label">Description</label>
                 <div class="col-sm-10">
-                    <textarea class="form-control-plaintext" id="item_description" name="item_description" readonly><%= @item['item_description'] %></textarea>
+                    <input class="form-control-plaintext" id="item_description" name="item_description" readonly value="<%= @item['item_description'] %>" ></input>
                 </div>
             </div>
             <div class="mb-3 row">
@@ -52,11 +52,6 @@
                 <div class="col-sm-10">
                     <input type="text" class="form-control-plaintext" readonly id="item_stock" name="item_stock" value="<%= @item['item_stock'] %>">
                 </div>
-                <% if @errors.any? { |e| e.include?('Item Stock')} %>
-                    <div class="form-text text-danger">
-                        <%= @errors.find { |e| e.include?('Item Stock')} %>
-                    </div>
-                <% end %>
             </div>
             <div class="mb-3 row">
                 <label for="item_photo" class="col-sm-2 col-form-label">Item Photo</label>
@@ -69,8 +64,12 @@
 
             <div class="mb-3 row">
                 <label for="item_status" class="col-sm-2 col-form-label">Status</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" readonly id="item_status" name="item_status" value="<%= @item['item_status'] %>">
+                <div class="col-sm-10 mt-2">
+                    <% if @item['item_status'] == "Active" %>
+                        <span class="badge bg-success">Active</span>
+                    <% else %>
+                        <span class="badge bg-danger">Inactive</span>
+                    <% end %>
                 </div>
             </div>
 
