--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="row mb-3">
-        <div class="col-12">
+        <div class="col-9">
             <div class="card mb-3">
                 <div class="row g-0">
                     <div class="col-md-6">
@@ -51,6 +51,13 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="card">
+                <div class="card-body">
+                    <p><b>Atur Jumlah dan Catatan</b></p>
                 </div>
             </div>
         </div>
