update view_item_no_user page

--- a/views/user/items/view_item_no_user.erb
+++ b/views/user/items/view_item_no_user.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="row mb-3">
-        <div class="col-12">
+        <div class="col-12 col-md-9">
             <div class="card mb-3">
                 <div class="row g-0">
                     <div class="col-md-6">
@@ -52,6 +52,18 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="text-uppercase">You Don't get to buy this product until you register or log in</h5>
+                    <p>Don't Have An Account ?</p>
+                    <button type="button" class="btn btn-outline-info float-end">Register Now</button>
+                    <br><br><br>
+                    <p>Having existing account ?</p>
+                    <button type="button" class="btn btn-outline-primary float-end">Login Now</button>
                 </div>
             </div>
         </div>
