update view_item_no_user page

--- a/views/user/items/view_item_no_user.erb
+++ b/views/user/items/view_item_no_user.erb
@@ -60,10 +60,11 @@
                 <div class="card-body">
                     <h5 class="text-uppercase">You Don't get to buy this product until you register or log in</h5>
                     <p>Don't Have An Account ?</p>
-                    <button type="button" class="btn btn-outline-info float-end">Register Now</button>
+                    <a href="/register" class="btn btn-outline-info float-end">Register Now</a>
                     <br><br><br>
+
                     <p>Having existing account ?</p>
-                    <button type="button" class="btn btn-outline-primary float-end">Login Now</button>
+                    <a href="/login" class="btn btn-outline-primary float-end">Login Now</a>
                 </div>
             </div>
         </div>
