update view_item_no_user page

--- a/views/user/items/view_item_no_user.erb
+++ b/views/user/items/view_item_no_user.erb
@@ -63,7 +63,7 @@
                     <a href="/register" class="btn btn-outline-info float-end">Register Now</a>
                     <br><br><br>
 
-                    <p>Having existing account ?</p>
+                    <p>Having an existing account ?</p>
                     <a href="/login" class="btn btn-outline-primary float-end">Login Now</a>
                 </div>
             </div>
