update transaction page

--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -30,8 +30,8 @@
                             <a href="/payment/<%= trx['transaction_id'] %>" class="btn btn-primary">Lanjutkan Pembayaran</a>
                         </div>
                     </div>
-
                 </div>
             </div>
-
+        <% end %>
+    <% end %>
 </div>
