--- a/views/seller/seller_items/item_lists.erb
+++ b/views/seller/seller_items/item_lists.erb
@@ -7,7 +7,32 @@
         <div class="card-header">
             <i class="fas fa-table me-1"></i>
             Item Lists
-            <a href="/add_an_item/<%= current_user['user_id'] %>" class="btn btn-sm btn-success float-end">Add An Item</a>
+            <% if @has_store %>
+                <a href="/add_an_item/<%= current_user['user_id'] %>" class="btn btn-sm btn-success float-end">Add An Item</a>
+            <% else %>
+                <button class="btn btn-sm btn-secondary float-end"  data-bs-toggle="modal" data-bs-target="#alertNotification">
+                    Add An Item
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="alertNotification" tabindex="-1" aria-labelledby="myAlert" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="myAlert">Alert Notification</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="alert alert-danger">
+                                    ⚠️ You must create a store before adding items.
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <% end %>
         </div>
         <div class="card-body">
             <% if session[:success] %>
