change item_view in user & no_user homepage

--- a/views/user/index.erb
+++ b/views/user/index.erb
@@ -29,10 +29,10 @@
         </div>
     </div>
 
-    <div class="row mb-3">
+    <div class="row g-3">
         <% if @items.any? %>
             <% @items.each do |item| %>
-                <div class="col-md-3 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
                     <div class="card h-100 ">
                         <a href="/view_detail_item/<%= item['item_id'] %>" class="text-decoration-none text-dark">
                             <% if item['item_photo'] && !item['item_photo'].empty? %>
@@ -44,10 +44,13 @@
                                 <p class="card-text">
                                     <%= item['item_name'] %>
                                 </p>
-                                <p class="card-text">
+                                <p class="card-price">
                                     <strong>
                                         <%= rupiah_currency(item['item_price']) %>
                                     </strong>
+                                </p>
+                                <p class="card-store">
+                                    <strong><%= item['store_name'] %></strong>
                                 </p>
                             </div>
                         </a>
